--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1"
+    "@mui/material": "^7.1.1",
+    "react-router-dom": "^7.6.2"
   }
 }
