--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
