--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
     "prisma": "^6.10.1"
   }
