--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
+    "express": "^5.1.0",
     "prisma": "^6.10.1"
-  }
+  },
+  "description": ""
 }
