--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "prisma": "^6.10.1"
   },
