--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,8 +13,10 @@
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.10.1"
   },
   "description": ""
